log
Thu 09 Mar 2023 03:49:21 PM UTC: 
 tests:  0|7
total_score: 0/70
89e6987
Thu 16 Mar 2023 09:09:01 PM UTC: 
 tests:  0|7
total_score: 0/70
634c223
Thu 16 Mar 2023 09:12:32 PM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:18:3: error: statement with no effect [-Werror=unused-value]
   18 |   *a; = pivote
      |   ^~
exercises.c:18:7: error: expected expression before ‘=’ token
   18 |   *a; = pivote
      |       ^
cc1: all warnings being treated as errors
Compilation failed
7212e0e
Thu 16 Mar 2023 09:12:54 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:18:3: error: statement with no effect [-Werror=unused-value]
   18 |   *b; = pivote
      |   ^~
exercises.c:18:7: error: expected expression before ‘=’ token
   18 |   *b; = pivote
      |       ^
cc1: all warnings being treated as errors
Compilation failed
bec89d3
Thu 16 Mar 2023 09:13:50 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:18:3: error: statement with no effect [-Werror=unused-value]
   18 |   b; = pivote
      |   ^
exercises.c:18:6: error: expected expression before ‘=’ token
   18 |   b; = pivote
      |      ^
cc1: all warnings being treated as errors
Compilation failed
faf3831
Thu 16 Mar 2023 09:14:00 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:18:3: error: statement with no effect [-Werror=unused-value]
   18 |   b; = pivote;
      |   ^
exercises.c:18:6: error: expected expression before ‘=’ token
   18 |   b; = pivote;
      |      ^
cc1: all warnings being treated as errors
Compilation failed
043ce22
Thu 16 Mar 2023 09:14:13 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:16:16: error: initialization of ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   16 |   int pivote = a;
      |                ^
exercises.c:18:3: error: statement with no effect [-Werror=unused-value]
   18 |   b; = pivote;
      |   ^
exercises.c:18:6: error: expected expression before ‘=’ token
   18 |   b; = pivote;
      |      ^
cc1: all warnings being treated as errors
Compilation failed
ba366d2
Thu 16 Mar 2023 09:15:57 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|6
total_score: 10/70
397d901
Thu 16 Mar 2023 09:20:25 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘asignarValor’:
exercises.c:78:3: error: invalid type argument of unary ‘*’ (have ‘Vector’)
   78 |   *v[i] = valor;
      |   ^~~~~
Compilation failed
2a5c0d2
Thu 16 Mar 2023 09:21:12 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘asignarValor’:
exercises.c:78:10: error: incompatible types when assigning to type ‘Vector’ from type ‘int’
   78 |   v[i] = valor;
      |          ^~~~~
Compilation failed
a06d4f3
Thu 16 Mar 2023 09:31:30 PM UTC: 
 exercises.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
2f046b9
Thu 16 Mar 2023 09:32:36 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
5e1d5e5
Thu 16 Mar 2023 09:36:47 PM UTC: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:60:12: error: returning ‘int’ from a function with return type ‘Persona *’ makes pointer from integer without a cast [-Werror=int-conversion]
   60 |     return EXIT_FAILURE;
      |            ^~~~~~~~~~~~
exercises.c:62:11: error: format ‘%c’ expects argument of type ‘char *’, but argument 2 has type ‘char (*)[30]’ [-Werror=format=]
   62 |   scanf("%c", &p->nombre);
      |          ~^   ~~~~~~~~~~
      |           |   |
      |           |   char (*)[30]
      |           char *
exercises.c:63:11: error: format ‘%c’ expects argument of type ‘char *’, but argument 2 has type ‘char (*)[11]’ [-Werror=format=]
   63 |   scanf("%c", &p->rut);
      |          ~^   ~~~~~~~
      |           |   |
      |           |   char (*)[11]
      |           char *
exercises.c:62:3: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   62 |   scanf("%c", &p->nombre);
      |   ^~~~~~~~~~~~~~~~~~~~~~~
exercises.c:63:3: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   63 |   scanf("%c", &p->rut);
      |   ^~~~~~~~~~~~~~~~~~~~
exercises.c:64:3: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   64 |   scanf("%i", &p->edad);
      |   ^~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ed27d43
